@@ -1,8 +1,14 @@
+2009-09-17  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
+
+	* src/win/winmain.c (MyFPrintF, MyVFPrintF, MyPrintF): Cannot call
+	va_list functions twice with the same va_list.  Have to call a
+	pair of va_end() and either va_start() or va_copy() in between.
+
 2009-09-16  Benjamin Lindner  <lindnerb@users.sourceforge.net> 
 
-	* term/emf.trm (ENHemf_FLUSH):  Possible fix for the problem of Windows
-	utilities not properly displaying files created using enhaced text mode.
-	Bug #2744404
+	* term/emf.trm (ENHemf_FLUSH): Possible fix for the problem of
+	Windows utilities not properly displaying files created using
+	enhaced text mode.  Bug #2744404
 
 2009-09-13  Ethan A Merritt  <merritt@u.washington.edu>
 
